--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://<username>:<password>@localhost:27017/<database_name>?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://test-user01:thisIsTest01@market.xdkfm.mongodb.net/market?retryWrites=true&w=majority&appName=Market
